# grok-desk

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json
.grok/workflows/: idl-client-sync.rhai  solana-security-pass.rhai  solana-test-matrix.rhai
docs/: SMOKE.md
docs/fixtures/: README.md  subagent_finished.json  subagent_meta.json  subagent_spawned.json  transcript_tool_group.json
docs/solana-workhorse/: 01-inventory.md  02-dogfood.md  03-profile.md  04-mcp-shortlist.md  05-desk-upgrades.md  06-metrics.md  IMPLEMENTATION.md  README.md
scripts/: install-local.sh
src/: App.tsx  DESIGN.md  activity.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: acp.rs  clipboard.rs  fs_browse.rs  git.rs  install.rs  lib.rs  main.rs  pins.rs  pty.rs  session_groups.rs  session_titles.rs
src/components/: ActivityPane.tsx  DiffPane.tsx  InspectorRail.tsx  PlanPane.tsx  RichText.tsx  SlashPalette.tsx
src/components/chat/: Composer.tsx  MessageBubble.tsx  PermissionBanner.tsx  PromptQueue.tsx  StallBanner.tsx  TranscriptList.tsx  WatchingBanner.tsx
src/components/command/: CommandPalette.tsx  ShortcutsHelp.tsx
src/hooks/: useComposerDrafts.ts  useGitDiff.ts  useLayoutChrome.ts  usePinsAndGroups.ts  useSessionStore.ts
src/lib/: agentHelpers.ts  caps.ts  format.ts  layout.ts  permissionSummary.ts  planParse.ts  sessionStatus.ts  sessionTitle.ts  shortcuts.ts
templates/solana/: AGENTS.md  dogfood-friction-diary.md  dogfood-scorecard.md  solana-profile.toml.example
(+17 files in other folders)
