[package]
name = "grok-desk"
version = "0.9.0"
description = "Grok Build desktop shell — session mission control for the coding agent"
authors = ["you"]
edition = "2021"

[lib]
name = "grok_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
which = "7"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
tauri-plugin-dialog = "2.7.1"
